--- a/hams_analysis.ipynb
+++ b/hams_analysis.ipynb
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 69,
    "metadata": {
     "tags": []
    },
@@ -298,7 +298,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Column CATCHMENT has to following unique values: \nTennessee,Utah,California,Colorado,Entire Network,Connecticut,Georgia,Iowa,Maryland,Michigan,Minnesota,New Mexico,New York,Ohio,Oregon \n\n\nColumn NETWORK has to following unique values: \nEIP,IHSP,COVID-NET \n\n\nColumn YEAR has to following unique values: \n2020.0 \n\n\nColumn MMWR-YEAR has to following unique values: \n2020.0,2021.0 \n\n\nColumn MMWR-WEEK has to following unique values: \n10.0,11.0,12.0,13.0,14.0,15.0,16.0,17.0,18.0,19.0,20.0,21.0,22.0,23.0,24.0,25.0,26.0,27.0,28.0,29.0,30.0,31.0,32.0,33.0,34.0,35.0,36.0,37.0,38.0,39.0,40.0,41.0,42.0,43.0,44.0,45.0,46.0,47.0,48.0,49.0,50.0,51.0,52.0,53.0,1.0,2.0,3.0,4.0,5.0,6.0,7.0,8.0,9.0 \n\n\nColumn AGE CATEGORY has to following unique values: \nOverall,0-4 yr,5-17 yr,18-49 yr,50-64 yr,65+ yr,65-74 yr,75-84 yr,85+,18-29 yr,30-39 yr,40-49 yr,< 18,>= 18 \n\n\nColumn SEX has to following unique values: \nOverall,Male,Female \n\n\nColumn RACE has to following unique values: \nOverall,White,Black,Hispanic/Latino,Asian/Pacific Islander,American Indian/Alaska Native \n\n\n"
+      "Column CATCHMENT has to following unique values: \nTennessee,Utah,California,Colorado,Entire Network,Connecticut,Georgia,Iowa,Maryland,Michigan,Minnesota,New Mexico,New York,Ohio,Oregon\n15 in total\n\n\nColumn NETWORK has to following unique values: \nEIP,IHSP,COVID-NET\n3 in total\n\n\nColumn YEAR has to following unique values: \n2020.0\n1 in total\n\n\nColumn MMWR_YEAR has to following unique values: \n2020.0,2021.0\n2 in total\n\n\nColumn MMWR_WEEK has to following unique values: \n10.0,11.0,12.0,13.0,14.0,15.0,16.0,17.0,18.0,19.0,20.0,21.0,22.0,23.0,24.0,25.0,26.0,27.0,28.0,29.0,30.0,31.0,32.0,33.0,34.0,35.0,36.0,37.0,38.0,39.0,40.0,41.0,42.0,43.0,44.0,45.0,46.0,47.0,48.0,49.0,50.0,51.0,52.0,53.0,1.0,2.0,3.0,4.0\n48 in total\n\n\nColumn AGE_CATEGORY has to following unique values: \nOverall,0-4 yr,5-17 yr,18-49 yr,50-64 yr,65+ yr,65-74 yr,75-84 yr,85+,18-29 yr,30-39 yr,40-49 yr,< 18,>= 18\n14 in total\n\n\nColumn SEX has to following unique values: \nOverall,Male,Female\n3 in total\n\n\nColumn RACE has to following unique values: \nOverall,White,Black,Hispanic/Latino,Asian/Pacific Islander,American Indian/Alaska Native\n6 in total\n\n\n"
      ]
     }
    ],
@@ -770,6 +770,20 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "source": [],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
+   ]
   }
  ]
 }
